tests/ui/mismatched_types/main.stderr
error[E0308]: mismatched types
  --> $DIR/main.rs:2:18
   |
LL |       let x: u32 = (
   |  ____________---___^
   | |            |
   | |            expected due to this
LL | |     );
   | |_____^ expected `u32`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
