tests/ui/mismatched_types/main.rs
fn main() {
    let x: u32 = ( //~ ERROR mismatched types
    );
}
